# integration_test

./: .gitignore  ReadMe.md
cxx/opencv_linking/: CMakeLists.txt  build_command.bat  opencv_test.cpp
msvc_cmake_example/: ReadMe.md
msvc_cmake_example/a_dll/: CMakeLists.txt  a_dll.cpp  dllmain.cpp  window_command.bat
msvc_cmake_example/a_dll/include/: a_dll.h
msvc_cmake_example/b_dll/: CMakeLists.txt  b_dll.cpp  build_cmd.sh  dllmain.cpp  window_build.bat
msvc_cmake_example/b_dll/include/: b_dll.h
